--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Umbrella.AspNetCore.Blazor.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Umbrella.AspNetCore.Blazor.csproj
@@ -14,6 +14,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Content Remove="package-lock.json" />
 	  <Content Remove="package.json" />
 	  <Content Remove="tsconfig.json" />
 	  <Content Remove="Content\**" />
@@ -30,6 +31,7 @@
 
 	<ItemGroup>
 		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
+		<None Include="package-lock.json" />
 		<None Include="package.json" />
 		<None Include="tsconfig.json" />
 		<None Include="Content\**" />
