--- a/Core/src/Umbrella.AppFramework/Umbrella.AppFramework.csproj
+++ b/Core/src/Umbrella.AppFramework/Umbrella.AppFramework.csproj
@@ -11,6 +11,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
 	</ItemGroup>
 
