--- a/Logging/src/Umbrella.Extensions.Logging.Azure/Umbrella.Extensions.Logging.Azure.csproj
+++ b/Logging/src/Umbrella.Extensions.Logging.Azure/Umbrella.Extensions.Logging.Azure.csproj
@@ -11,7 +11,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Azure.Cosmos.Table" Version="1.0.8" />
+		<PackageReference Include="Azure.Data.Tables" Version="12.6.1" />
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
 	</ItemGroup>
 
