--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ coverage.json
 /FileSystem/test/Umbrella.FileSystem.Test/images
 node_modules
 **/wwwroot/dist/**
+**/Umbrella.AspNetCore.Blazor/**/*.css
