--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/package.json
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/package.json
@@ -5,26 +5,30 @@
 	"scripts": {
 		"build": "webpack",
 		"build-analyze": "webpack --analyze",
-		"build-release": "webpack --mode production"
+		"build-release": "webpack --mode production & gulp build-scoped-sass",
+		"build-scoped": "gulp build-scoped-sass"
 	},
 	"devDependencies": {
-		"@types/webpack-env": "1.17.0",
-		"autoprefixer": "10.4.7",
+		"@types/webpack-env": "1.18.0",
+		"autoprefixer": "10.4.13",
 		"clean-webpack-plugin": "4.0.0",
-		"css-loader": "6.7.1",
-		"mini-css-extract-plugin": "2.6.1",
-		"node-sass": "7.0.1",
-		"css-minimizer-webpack-plugin": "4.0.0",
-		"postcss": "8.4.14",
-		"postcss-loader": "7.0.1",
+		"css-loader": "6.7.3",
+		"mini-css-extract-plugin": "2.7.2",
+		"node-sass": "8.0.0",
+		"css-minimizer-webpack-plugin": "4.2.2",
+		"gulp": "4.0.2",
+		"gulp-sass": "5.1.0",
+		"postcss": "8.4.21",
+		"postcss-loader": "7.0.2",
 		"postcss-pseudoelements": "5.0.0",
-		"sass-loader": "13.0.2",
-		"terser-webpack-plugin": "5.3.3",
-		"ts-loader": "9.3.1",
+		"sass": "1.57.1",
+		"sass-loader": "13.2.0",
+		"terser-webpack-plugin": "5.3.6",
+		"ts-loader": "9.4.2",
 		"typescript": "4.7.4",
-		"webpack": "5.74.0",
-		"webpack-bundle-analyzer": "4.5.0",
-		"webpack-cli": "4.10.0",
+		"webpack": "5.75.0",
+		"webpack-bundle-analyzer": "4.7.0",
+		"webpack-cli": "5.0.1",
 		"webpack-node-externals": "3.0.0"
 	},
 	"dependencies": {
