--- a/.editorconfig
+++ b/.editorconfig
@@ -268,3 +268,4 @@ dotnet_diagnostic.IDE0200.severity = error
 dotnet_diagnostic.CA1200.severity = suggestion
 dotnet_diagnostic.CA1311.severity = error
 dotnet_diagnostic.IDE0090.severity = error
+dotnet_diagnostic.IDE0028.severity = error
