--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -54,11 +54,11 @@
 		<Using Include="System.Threading.Tasks" />
 	</ItemGroup>
 
-	<!--<ItemGroup>
+	<ItemGroup>
 		<PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.4.27">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-	</ItemGroup>-->
+	</ItemGroup>
 	
 </Project>
