--- a/Analyzers/src/Umbrella.Analyzers.ModelStandards/Umbrella.Analyzers.ModelStandards.csproj
+++ b/Analyzers/src/Umbrella.Analyzers.ModelStandards/Umbrella.Analyzers.ModelStandards.csproj
@@ -24,7 +24,7 @@
 	</ItemGroup>-->
 
 	<ItemGroup>
-		<None Include="bin\\$(Configuration)\\netstandard2.0\\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+		<None Include="bin\$(Configuration)\netstandard2.0\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
 	</ItemGroup>
 
 	<ItemGroup>
