--- a/Core/src/Umbrella.Utilities/Umbrella.Utilities.csproj
+++ b/Core/src/Umbrella.Utilities/Umbrella.Utilities.csproj
@@ -10,6 +10,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Data\Options\**" />
+	  <EmbeddedResource Remove="Data\Options\**" />
+	  <None Remove="Data\Options\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Diagnostics" Version="8.4.0" />
 		<PackageReference Include="CommunityToolkit.HighPerformance" Version="8.4.0" />
 		<PackageReference Include="Humanizer.Core" Version="2.14.1" />
@@ -62,10 +68,6 @@
 
 	<ItemGroup>
 		<Content Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Data\Options\" />
 	</ItemGroup>
 
 </Project>
