--- a/Core/src/Umbrella.Utilities/Umbrella.Utilities.csproj
+++ b/Core/src/Umbrella.Utilities/Umbrella.Utilities.csproj
@@ -64,4 +64,8 @@
 		<Content Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\Umbrella.DataAnnotations\Umbrella.DataAnnotations.csproj" />
+	</ItemGroup>
+
 </Project>
